@@ -17,7 +17,6 @@
 #define TERMINFO
 #define LIBS_TERMCAP -lncurses
 
-#undef LD_SWITCH_SYSTEM_TEMACS
 #undef LD_SWITCH_SYSTEM
 
   /*  Han Boetes <han@mijncomputer.nl> says this
